# termy

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.theme-store  README.md  Task.md  build.rs  justfile  railway.json
.github/workflows/: architecture-checks.yml  plugin-full-example.yml  release.yml
Casks/: termy.rb
bindings/go-bindings/: README.md  bindings.go  bindings_test.go  go.mod
bindings/ts-bindings/: README.md  package.json
crates/auto_update/: Cargo.toml
crates/cli/: Cargo.toml
crates/command_core/: Cargo.toml
crates/config_core/: Cargo.toml
crates/gemini/: Cargo.toml
crates/plugin_release_notes/: Cargo.toml  termy-plugin.json
crates/release_core/: Cargo.toml
crates/search/: Cargo.toml
crates/terminal_ui/: Cargo.toml
crates/termy_api/: Cargo.toml  README.md
crates/theme-store/: Cargo.toml  README.md
crates/theme_core/: Cargo.toml
crates/themes/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: configuration.md  development.md  keybindings.md
docs/architecture/: command-boundary.md  plugins.md
examples/plugin-full/: Cargo.toml  README.md  termy-plugin.json
scripts/: build-linux.sh  check-boundaries.sh
site/: .env.example  index.html  package.json  server.ts
site/src/: index.css  routeTree.gen.ts
src/: app_actions.rs  colors.rs  commands.rs  config.rs  deeplink.rs  main.rs  menus.rs  plugins.rs  settings_view.rs  startup.rs  theme_store.rs
src/config/: io.rs  mod.rs  mutate.rs
src/keybindings/: mod.rs
src/settings_view/: colors.rs  components.rs  input_mode.rs  keybinds.rs  mod.rs  (+5 more)
(+137 files in other folders)
