[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
termy_command_core = { path = "../command_core" }
termy_config_core = { path = "../config_core" }
termy_terminal_ui = { path = "../terminal_ui" }
